--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -1,8 +1,10 @@
 
 -----------------------------------------------------------------------------------------------------------
-Release:  Week10301-Uitgangspositie
+Release:  10301-Uitgangspositie
 Summary: 
     niets
 
 details:
+r2 2010-07-26 added first version
+r1 2010-07-26 added project struct
 
