--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -1,6 +1,6 @@
 
 -----------------------------------------------------------------------------------------------------------
-Release:  10301-Uitgangspositie
+Release:  10301-Uitgangspositie10301-Uitgangspositie
 Summary: 
     niets
 
