--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -1,5 +1,18 @@
 -----------------------------------------------------------------------------------------------------------
 Release:  10335-MysqlDumpAndCustomCommand
+Summary:  redesigned delivery
+          improbed 
+
+r38 2010-08-27 fixed date related problem in simple_gfs_archive.recipe
+r37 2010-08-21 added test feature
+r36 2010-08-21 redesigned the delivery procedure to allow delta backups
+r35 2010-08-20 updated release notes
+r33 2010-08-20 updated release notes
+r32 2010-08-20 updated release notes
+r31 2010-08-20 updated release notes
+
+-----------------------------------------------------------------------------------------------------------
+Release:  10335-MysqlDumpAndCustomCommand
 Summary: added MysqlDump
          added Custom command
          improved error handling of recipes
